Fix text overflowing.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -133,5 +133,6 @@ pre {
 pre code {
  float: left;
  clear: both;
- min-width: 100%;
+ width: 100%;
+ overflow: auto;
 }
